alignment fixes for fluid database dropdown

--- a/src/containers/layout/ui-sections/dpflow/uiLayout.css
+++ b/src/containers/layout/ui-sections/dpflow/uiLayout.css
@@ -18,5 +18,5 @@
 }
 
 .composition_method_dropdown_naturalgas {
-  margin-left: 14.1rem;
+  margin-left: 14.7rem;
 }
